# forest

./: .gitignore  README.md  pyproject.toml
.github/workflows/: linters.yml
src/forest_ml/: data.py  pipeline.py  test.py  train.py
src/hwfctp/: data.py  pipeline.py  predict.py  train.py
