[tool.poetry]
name = "hwfctp"
version = "0.1.0"
description = "Olga's homework for RS School Machine Learning course"
authors = ["OlgaRud <olgakurgan@gmail.com>"]

[tool.poetry.scripts]
train = "hwfctp.train:train"

[tool.poetry.dependencies]
python = "^3.7.12"
click = "^8.0.4"
pandas = "^1.3.5"
sklearn = "^0.0"
scikit-learn = "^1.0.2"
lightgbm = "^3.3.1"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.942"
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
